<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="148dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@mipmap/ic_dropdown_bg"
    >
    <com.youyou.uuelectric.renter.Utils.view.RippleView
        android:id="@+id/caritem_feedback_rela"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:rv_color="@color/c1"
        app:rv_type="rectangle"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            >
            <ImageView
                android:id="@+id/caritem_feedback_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@mipmap/ic_moreoption_feedback"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_feedback"
                android:textColor="@color/c3"
                android:textSize="@dimen/f3"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

    </com.youyou.uuelectric.renter.Utils.view.RippleView>

    <com.youyou.uuelectric.renter.Utils.view.RippleView
        android:id="@+id/caritem_guide_rela"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:rv_color="@color/c1"
        app:rv_type="rectangle"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            >
            <ImageView
                android:id="@+id/caritem_guide_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@mipmap/ic_moreoption_guideline"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_guide"
                android:textColor="@color/c3"
                android:textSize="@dimen/f3"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </com.youyou.uuelectric.renter.Utils.view.RippleView>

    <com.youyou.uuelectric.renter.Utils.view.RippleView
        android:id="@+id/caritem_safeorder_rela"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:rv_color="@color/c1"
        app:rv_type="rectangle"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            >
            <ImageView
                android:id="@+id/caritem_safeorder_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@mipmap/ic_moreoption_insurance"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_safe"
                android:textColor="@color/c3"
                android:textSize="@dimen/f3"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </com.youyou.uuelectric.renter.Utils.view.RippleView>

    <com.youyou.uuelectric.renter.Utils.view.RippleView
        android:id="@+id/caritem_cancelorder_rela"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:rv_color="@color/c1"
        app:rv_type="rectangle"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            >
            <ImageView
                android:id="@+id/caritem_cancelorder_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@mipmap/ic_moreoption_cancel"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_stroke"
                android:textColor="@color/c3"
                android:textSize="@dimen/f3"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </com.youyou.uuelectric.renter.Utils.view.RippleView>

</LinearLayout>
