<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c11"
    tools:context="com.youyou.uuelectric.renter.UI.main.rentcar.ConfirmCarActivity">

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttom_root" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/s2"
        android:background="@drawable/btn_white_shape_normal"
        android:paddingBottom="@dimen/s2"
        android:paddingLeft="@dimen/s3"
        android:paddingRight="@dimen/s3"
        android:paddingTop="@dimen/s2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <me.grantland.widget.AutofitTextView
                android:id="@+id/poi_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/c3"
                android:textSize="@dimen/f4" />

            <TextView
                android:id="@+id/poi_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/poi_name"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/c4"
                android:textSize="@dimen/f5" />
        </RelativeLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/buttom_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/c11"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_confirm_height"
            android:layout_marginLeft="@dimen/s2"
            android:layout_marginRight="@dimen/s2"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/left_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/ic_lastpage_list" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="124dp"
                    android:layout_marginLeft="@dimen/s4"
                    android:layout_marginRight="@dimen/s2"
                    android:layout_toLeftOf="@+id/right_page"
                    android:layout_toRightOf="@id/left_page" />

                <ImageView
                    android:id="@+id/right_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/ic_nextpage_list" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.rey.material.widget.Button
                    android:id="@+id/left_button"
                    style="@style/b1_left_button"
                    android:layout_width="130dp"
                    android:layout_height="44dp"
                    android:layout_marginRight="@dimen/s2"
                    android:background="@drawable/btn_white_shape_normal"
                    android:gravity="center"
                    android:text="@string/trip_plan"
                    app:rd_enable="true" />

                <include
                    layout="@layout/b3_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <com.youyou.uuelectric.renter.Utils.view.DashedLine
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/s4"
            android:layout_marginRight="@dimen/s4"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/doing_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/s4"
            android:textColor="@color/c9"
            android:textSize="@dimen/f4" />

        <LinearLayout
            android:id="@+id/price_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/s1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/doing_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/s1"
                android:background="@drawable/doing_title_desc_bg"
                android:paddingBottom="2dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="2dp"
                android:textColor="@color/c8"
                android:textSize="@dimen/f6" />

            <TextView
                android:id="@+id/price_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥1.20"
                android:textColor="@color/c3"
                android:textSize="@dimen/f4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_mileage_unit"
                android:textColor="@color/c4"
                android:textSize="@dimen/f5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" + "
                android:textColor="@color/c4"
                android:textSize="@dimen/f5" />

            <TextView
                android:id="@+id/price_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥1.20"
                android:textColor="@color/c3"
                android:textSize="@dimen/f4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_time_unit"
                android:textColor="@color/c4"
                android:textSize="@dimen/f5" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/nocar_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c10"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

        <TextView
            android:id="@+id/tip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/s4"
            android:text="@string/has_car_notice_name"
            android:textColor="@color/c3"
            android:textSize="@dimen/f2" />

        <TextView
            android:id="@+id/tip_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tip_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/s4"
            android:gravity="center"
            android:text="@string/has_car_notice_desc"
            android:textColor="@color/c4"
            android:textSize="@dimen/f4" />

        <include
            layout="@layout/b5_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tip_desc"
            android:layout_marginTop="18dp" />

        <include
            layout="@layout/b4_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/s4"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp" />

        <TextView
            android:id="@+id/tip_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="76dp"
            android:gravity="center"
            android:text="@string/has_car_notice_outher"
            android:textColor="@color/c4"
            android:textSize="@dimen/f4" />
    </RelativeLayout>


</RelativeLayout>
